--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body{
     grid-column: 2 / 3;
     /* cambios nueva rama */
     transform: skew(1,2);
-   
+    transform: translateY(10px);
+    
        /* Animación ajustes, tiempo,etc */
        animation-name: Logo;
        animation-iteration-count: initial;
