--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     outline: 2px black;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../Aplicando\ grids\ y\ full\ responsive\ Hans\ Huanca/Alan-Walker-4.jpg);
+    background-image: url(../Aplicando\ grids\ y\ full\ responsive\ Hans\ Huanca/alan-walker-4.jpg);
  
 }
 .navbar{
