--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     outline: 2px black;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../Aplicando\ grids\ y\ full\ responsive\ Hans\ Huanca/alanwalker4.jpg);
+    background-image: url(../grids-full-responsive/alanwalker4.jpg);
  
 }
 .navbar{
